--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@ def handle_file(csv_text):
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
 
-      const validUsername = "audituser";
+      const validUsername = "firstupsupport";
       const validPassword = "letmein123";
 
       if (username === validUsername && password === validPassword) {
